Session Timer 구현

--- a/spring02/src/main/webapp/WEB-INF/web.xml
+++ b/spring02/src/main/webapp/WEB-INF/web.xml
@@ -55,6 +55,10 @@
 		</user-data-constraint>
 	</security-constraint> 
 	
+<!-- 	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config> -->
+	
 <!-- 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
