--- a/spring02/src/main/webapp/WEB-INF/web.xml
+++ b/spring02/src/main/webapp/WEB-INF/web.xml
@@ -45,7 +45,7 @@
 
 	
  <!-- https -->  
-	<security-constraint>  
+<!-- 	<security-constraint>  
   		<web-resource-collection>
       		<web-resource-name>SSL Forward</web-resource-name>
       		<url-pattern>/*</url-pattern>
@@ -53,21 +53,32 @@
     	<user-data-constraint>
 			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
 		</user-data-constraint>
-	</security-constraint> 
+	</security-constraint>  -->
 	
 <!-- 	<session-config>
 		<session-timeout>30</session-timeout>
 	</session-config> -->
 	
-<!-- 	<filter>
+	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
-	 -->
-<!-- 	<filter-mapping>
+	
+ 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping> -->
-
+	</filter-mapping>
+	
+	
+	<context-param>
+  		<param-name>contextConfigLocation</param-name>
+  		<param-value>
+      		/WEB-INF/spring/root-context.xml
+      		/WEB-INF/spring/spring-security.xml
+  		</param-value>
+  	</context-param>
+	
+	
+	
 	
 </web-app>
