--- a/spring02/src/main/webapp/WEB-INF/web.xml
+++ b/spring02/src/main/webapp/WEB-INF/web.xml
@@ -46,7 +46,7 @@
 
 	
  <!-- https -->  
-<!-- 	<security-constraint>  
+ 	<security-constraint>  
   		<web-resource-collection>
       		<web-resource-name>SSL Forward</web-resource-name>
       		<url-pattern>/*</url-pattern>
@@ -54,7 +54,7 @@
     	<user-data-constraint>
 			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
 		</user-data-constraint>
-	</security-constraint>  -->
+	</security-constraint>
 	
 <!-- 	<session-config>
 		<session-timeout>30</session-timeout>
