--- a/spring02/src/main/webapp/WEB-INF/web.xml
+++ b/spring02/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	version="3.1">
 	<!-- 스프링의 환경설정 파일 로딩 -->
@@ -26,58 +27,56 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	<!-- 한글 처리를 위한 인코딩 필터 -->
-<filter>
-     <filter-name>encodingFilter</filter-name>
-     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-      <init-param>
-         <param-name>encoding</param-name>
-         <param-value>UTF-8</param-value>
-      </init-param>
-      <init-param>
-      <param-name>forceEncoding</param-name>
-      <param-value>true</param-value>
-    </init-param>
-</filter>
-   
-<filter-mapping>
-     <filter-name>encodingFilter</filter-name>
-     <url-pattern>/*</url-pattern>
-</filter-mapping>
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
 
-	
- <!-- https -->  
- 	<security-constraint>  
-  		<web-resource-collection>
-      		<web-resource-name>SSL Forward</web-resource-name>
-      		<url-pattern>/*</url-pattern>
-   		</web-resource-collection>
-    	<user-data-constraint>
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+
+	<!-- https -->
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>SSL Forward</web-resource-name>
+			<url-pattern>/*</url-pattern>
+		</web-resource-collection>
+		<user-data-constraint>
 			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
 		</user-data-constraint>
 	</security-constraint>
-	
-<!-- 	<session-config>
-		<session-timeout>30</session-timeout>
-	</session-config> -->
-	
-<!-- 	<filter>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-	</filter>
-	 -->
-<!-- 	<filter-mapping>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping> -->
+
+	<!-- <session-config> <session-timeout>30</session-timeout> </session-config> -->
+
+	<!-- <filter> <filter-name>springSecurityFilterChain</filter-name> <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class> 
+		</filter> -->
+	<!-- <filter-mapping> <filter-name>springSecurityFilterChain</filter-name> 
+		<url-pattern>/*</url-pattern> </filter-mapping> -->
 
 	<context-param>
-  <param-name>contextConfigLocation</param-name>
-  <param-value>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
       /WEB-INF/spring/root-context.xml
       /WEB-INF/spring/spring-security.xml
   </param-value>
-  </context-param>
+	</context-param>
+
+	<listener>
+		<listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
+	</listener>
 
 
-	
+
+
 </web-app>
